fix navbar on mobile view, edited dashboard layout

--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -121,20 +121,19 @@
         top: 0;
         left: -100%;
         height: 100vh;
-        width: 100%;
+        width: 100vw;
         background-color: rgb(25, 25, 25);
-        display: block;
-        padding: 40px 0;
-        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
         transition: all 0.3s ease;
+        padding-bottom: 10rem;
+        padding-top: 5rem;
     }
 
     .menu-list.active {
         left: 0%;
-    }
-
-    .menu-list li {
-        margin-top: 15vh;
     }
 
     .menu-list li a {
